--- a/src/Components/Common/header/Header.css
+++ b/src/Components/Common/header/Header.css
@@ -22,6 +22,7 @@
 .title-style{
     font-size: 18px;
     font-family: 'RobotoRegular';
+    color: black;
 }
 
 .options{
@@ -42,6 +43,7 @@
     font-size: 18px;
     font-family: 'RobotoRegular';
     cursor: pointer;
+    color: black;
 }
 
 .team{
@@ -52,6 +54,7 @@
     font-size: 18px;
     font-family: 'RobotoRegular';
     cursor: pointer;
+    color: black;
 }
 
 .login-style{
