--- a/src/Components/Common/home/Home.css
+++ b/src/Components/Common/home/Home.css
@@ -39,9 +39,10 @@
     margin-bottom: 3%;
 }
 
-.title-text{
-    font-family: InterMedium;
+.home-title-text{
     font-size: 52.9px;
+    color: black;
+    font-family: InterMedium;
 }
 
 .mcq-word{
@@ -87,6 +88,7 @@
     font-family: InterMedium;
     font-size: 16.21;
     margin-right: 5px;
+    color: black;
 }
 
 .arrow-style{
@@ -94,3 +96,16 @@
     size: 16.21;
 }
 
+.Details-view{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3%;
+    flex-direction: column;
+}
+
+.home-text{
+    color:black;
+    font-family: InterMedium;
+    font-size: 52.9px;
+}
