--- a/src/Components/Common/input/Input.css
+++ b/src/Components/Common/input/Input.css
@@ -26,6 +26,7 @@
 .title-text{
     font-family: 'Robotobold';
     font-size: 15px;
+    color: black;
 }
 
 .options{
@@ -43,12 +44,14 @@
     font-size: 18px;
     margin-right: 20%;
     cursor: pointer;
+    color: black;
 }
 
 .options-text{
     font-family:'RobotoRegular';
     font-size: 18px;
     cursor: pointer;
+    color: black;
 }
 
 /*.input-view{
@@ -106,4 +109,48 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.input-info-text{
+    font-family:'RobotoBold';
+    color: black;
+}
+
+.input-info-caption{
+    font-family:'RobotoBold';
+    color:rgb(72, 70, 78);
+    font-size: 13px;
+}
+
+.output-view{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right:3%;
+    margin-left: 6%;
+    background-color: #EBECF0;
+    margin-top: 2%;
+    box-shadow: 0 5px 25px 0 rgba(0, 0, 0, .25);
+}
+
+.output-heading{
+    font-family: 'RobotoBold';
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: black;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.output-text{
+    font-family: 'RobotoRegular';
+    font-size: 15px;
+    color: black;
+    margin-bottom:5px;
+    margin-left: 10px;
+}
+
+.input-footer-view{
+    width: 100%;
+    margin-top: 10%;
 }
